# template

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml  main.yaml
template/: model.py
tests/: test_export.py
